force-app/main/default/objects/Person__c/Person__c.object-meta.xml
<CustomObject>
    <label>Person</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Person ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>People</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>