force-app/main/default/objects/Person__c/fields/Charge__c.field-meta.xml
<CustomField>
    <fullName>Charge__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Currency: PLN</description>
    <label>Charge</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>