force-app/main/default/objects/Person__c/fields/Number_of_borrowed_items__c.field-meta.xml
<CustomField>
    <fullName>Number_of_borrowed_items__c</fullName>
    <label>Number of borrowed items</label>
    <summaryFilterItems>
        <field>Rental__c.Status__c</field>
        <operation>notEqual</operation>
        <value>turned</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Rental__c.Status__c</field>
        <operation>notEqual</operation>
        <value>reserved</value>
    </summaryFilterItems>
    <summaryForeignKey>Rental__c.Borrower__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>