force-app/main/default/objects/Person__c/fields/Rental_Limitation__c.field-meta.xml
<CustomField>
    <fullName>Rental_Limitation__c</fullName>
    <defaultValue>(5)</defaultValue>
    <label>Rental Limitation</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>