force-app/main/default/objects/Person__c/listViews/Charged_Clients.listView-meta.xml
<ListView>
    <fullName>Charged_Clients</fullName>
    <columns>NAME</columns>
    <columns>Name__c</columns>
    <columns>Surname__c</columns>
    <columns>Charge__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Number_of_borrowed_items__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <label>Charged Clients</label>
</ListView>