force-app/main/default/objects/Person__c/listViews/Clients_with_borrowings.listView-meta.xml
<ListView>
    <fullName>Clients_with_borrowings</fullName>
    <columns>NAME</columns>
    <columns>Name__c</columns>
    <columns>Surname__c</columns>
    <columns>Rental_Limitation__c</columns>
    <columns>Number_of_borrowed_items__c</columns>
    <columns>Charge__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Number_of_borrowed_items__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <label>Clients with borrowings</label>
</ListView>